// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-2:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-3 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-3+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-3+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-3:disabled+label {
  cursor: not-allowed;
}

.emotion-4 span {
  padding: 0;
}

.emotion-4 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-6 path {
  fill: white;
}

.emotion-9 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-9+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-9+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175bf5;
  border-radius: 0.25rem;
}

.emotion-9:disabled+label {
  cursor: not-allowed;
}

.emotion-10 span {
  padding: 0;
}

.emotion-10 svg {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-13 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-14:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-46 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-46+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-46+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-46:disabled+label {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-3"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-3"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-3"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
    </div>
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-46"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-9"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-10"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-46"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          <span
            className="emotion-14"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-46"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-2:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-3 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-3+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-3+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-3:disabled+label {
  cursor: not-allowed;
}

.emotion-4 span {
  padding: 0;
}

.emotion-4 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-6 path {
  fill: white;
}

.emotion-7 {
  padding-left: 0.25rem;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #191927;
  white-space: nowrap;
}

.emotion-10 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-10+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-10+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175bf5;
  border-radius: 0.25rem;
}

.emotion-10:disabled+label {
  cursor: not-allowed;
}

.emotion-11 span {
  padding: 0;
}

.emotion-11 svg {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-15 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-16:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-53 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-53+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-53+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-53:disabled+label {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div>
      <div
        className="emotion-0"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-3"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Not checked single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Checked Single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-3"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Not checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-3"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled not checked intermediate
            </span>
          </span>
        </div>
      </div>
      <div
        className="emotion-0"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-53"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Not checked single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Checked Single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled single
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={true}
                className="emotion-10"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-11"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-1"
          >
            <span
              className="emotion-2"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-53"
                data-testid="checkbox"
                disabled={false}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Not checked intermediate
            </span>
          </span>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <span
            className="emotion-15"
          >
            <span
              className="emotion-16"
              onClick={[Function]}
            >
              <input
                checked={false}
                className="emotion-53"
                data-testid="checkbox"
                disabled={true}
                id="styled-checkbox-"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
              <label
                className="emotion-4"
                htmlFor="styled-checkbox-"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-6"
                  />
                </span>
              </label>
            </span>
            <span
              className="emotion-7"
            >
              Disabled not checked intermediate
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox with Props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-2:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-3 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-3+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-3+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-3:disabled+label {
  cursor: not-allowed;
}

.emotion-4 span {
  padding: 0;
}

.emotion-4 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-6 path {
  fill: white;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-1"
        >
          <span
            className="emotion-2"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-3"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-4"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </label>
          </span>
          
        </span>
      </div>
    </div>
  </div>
</div>
`;
